--- a/src/styles/growArea.css
+++ b/src/styles/growArea.css
@@ -20,12 +20,12 @@
 
 .grow-wrap > textarea,
 .grow-wrap::after {
-  border-bottom: 1px solid #333;
+  border-bottom: 1px solid var(--font-color);
   padding: 0.5rem;
   font: inherit;
   grid-area: 1 / 1 / 2 / 2;
 }
 
 .grow-wrap > textarea:focus {
-  border-bottom: 2px solid #333;
+  border-bottom: 2px solid var(--font-color);
 }
