--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,23 +1,26 @@
 .header {
   margin: 0;
-  color: #333;
+  margin-bottom: 1rem;
+  color: var(--font-color);
   text-align: center;
-  padding: 2.5em 2em 0;
-  border-bottom: 1px solid #eee;
+  padding: 2.5rem 1rem 0;
 }
 
 .header h1 {
-  margin: 0.2em 0;
-  font-size: 3em;
+  margin: 0.2rem 0;
+  font-size: 3rem;
   font-weight: 300;
 }
 
 .header p {
   font-weight: 300;
   padding: 0;
-  margin-top: 0;
+  margin: 0;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid var(--border-color);
 }
 
 .sub-header {
-  padding-left: 1em;
+  color: var(--font-color);
+  font-weight: 300;
 }
