style: Max-width of 85ch on text area

--- a/src/styles/growArea.css
+++ b/src/styles/growArea.css
@@ -1,9 +1,11 @@
 .grow-wrap {
   display: grid;
+  max-width: 85ch;
   word-break: break-all;
   border: none;
   outline: none;
   background-color: transparent;
+  margin: 0 auto;
 }
 
 .grow-wrap::after {
