style: Invert layout to have a fixed textarea when analyzing

--- a/src/styles/growArea.css
+++ b/src/styles/growArea.css
@@ -17,6 +17,7 @@
 .grow-wrap > textarea {
   resize: none;
   overflow: hidden;
+  background-color: transparent;
   border: none;
   outline: none;
 }
